--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-crypto-bigint = { path = "/Users/bogdan/wb/github/crypto-bigint", features = ["rand"] }
+crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint", branch = "master", features = ["rand"] }
 rand_core = { version = "0.6", features = ["getrandom"] }
 lazy_static = "1.4"
 
