--- a/.github/workflows/crypto-primes.yml
+++ b/.github/workflows/crypto-primes.yml
@@ -112,7 +112,7 @@ jobs:
           components: clippy
           override: true
           profile: minimal
-      - run: cargo clippy --all --all-features -- -D warnings
+      - run: cargo clippy --all --all-features --tests -- -D warnings
 
   rustfmt:
     runs-on: ubuntu-latest
