--- a/.github/workflows/crypto-primes.yml
+++ b/.github/workflows/crypto-primes.yml
@@ -86,11 +86,12 @@ jobs:
           # 32-bit Linux
           - target: i686-unknown-linux-gnu
             rust: stable
-            deps: sudo apt update && sudo apt install gcc-multilib
+            deps: sudo apt update && sudo apt install gcc-multilib libssl-dev
 
           # 64-bit Linux
           - target: x86_64-unknown-linux-gnu
             rust: stable
+            deps: sudo apt update && sudo apt install gcc-multilib libssl-dev
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
