--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["cryptography", "no-std"]
 crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint", branch = "master", default-features = false, features = ["rand_core"] }
 rand_core = { version = "0.6", default-features = false }
 getrandom = { version = "0.2", optional = true, default-features = false, features = ["js"] }
-lazy_static = "1.4"
+lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }
 openssl = { version = "0.10", optional = true }
 rug = { version = "1.18", default-features = false, features = ["integer"], optional = true }
 
