--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 categories = ["cryptography", "no-std"]
 
 [dependencies]
-crypto-bigint = { version = "0.5.0-pre.2", default-features = false, features = ["rand_core"] }
+crypto-bigint = { version = "0.5", default-features = false, features = ["rand_core"] }
 rand_core = { version = "0.6", default-features = false }
 getrandom = { version = "0.2", optional = true, default-features = false, features = ["js"] }
 openssl = { version = "0.10", optional = true, features = ["vendored"] }
