--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ categories = ["cryptography", "no-std"]
 [dependencies]
 crypto-bigint = { version = "0.5.2", default-features = false, features = ["rand_core"] }
 rand_core = { version = "0.6", default-features = false }
-getrandom = { version = "0.2", optional = true, default-features = false, features = ["js"] }
 openssl = { version = "0.10", optional = true, features = ["vendored"] }
 rug = { version = "1.18", default-features = false, features = ["integer"], optional = true }
 
@@ -26,7 +25,7 @@ num-prime = "0.4.3"
 
 [features]
 default = ["default-rng"]
-default-rng = ["getrandom", "rand_core/getrandom"]
+default-rng = ["rand_core/getrandom"]
 tests-openssl = ["openssl"]
 tests-gmp = ["rug"]
 tests-exhaustive = []
