--- a/.github/workflows/crypto-primes.yml
+++ b/.github/workflows/crypto-primes.yml
@@ -150,4 +150,4 @@ jobs:
       - uses: baptiste0928/cargo-install@v3
         with:
           crate: "cargo-careful"
-      - run: cargo +nightly careful setup && cargo +nightly careful test
+      - run: cargo +nightly careful setup && cargo +nightly careful test --features=tests-exhaustive
