Relax crypto-bigint req now that rc.6 is out

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crypto-primes"
-version = "0.6.0-pre.1"
+version = "0.6.0-pre.2"
 edition = "2021"
 license = "Apache-2.0 OR MIT"
 description = "Random prime number generation and primality checking library"
@@ -10,21 +10,15 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.81"
 
 [dependencies]
-crypto-bigint = { version = "=0.6.0-rc.6", default-features = false, features = [
-	"rand_core",
-] }
+crypto-bigint = { version = "0.6.0-rc.6", default-features = false, features = ["rand_core"] }
 rand_core = { version = "0.6.4", default-features = false }
 openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
-rug = { version = "1.26", default-features = false, features = [
-	"integer",
-], optional = true }
+rug = { version = "1.26", default-features = false, features = ["integer"], optional = true }
 glass_pumpkin = { version = "1", optional = true }
 
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
-crypto-bigint = { version = "=0.6.0-rc.6", default-features = false, features = [
-	"alloc",
-] }
+crypto-bigint = { version = "0.6.0-rc.6", default-features = false, features = ["alloc"] }
 rand_chacha = "0.3"
 criterion = { version = "0.5", features = ["html_reports"] }
 num-modular = { version = "0.5", features = ["num-bigint"] }
@@ -40,12 +34,7 @@ tests-openssl = ["openssl"]
 tests-gmp = ["rug/std"]
 tests-glass-pumpkin = ["glass_pumpkin"]
 tests-exhaustive = []
-tests-all = [
-	"tests-openssl",
-	"tests-gmp",
-	"tests-exhaustive",
-	"tests-glass-pumpkin",
-]
+tests-all = ["tests-openssl", "tests-gmp", "tests-exhaustive", "tests-glass-pumpkin"]
 
 [package.metadata.docs.rs]
 features = ["default"]
