--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ rand_core = { version = "0.6.4", default-features = false }
 openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
 rug = { version = "1.26", default-features = false, features = ["integer"], optional = true }
 glass_pumpkin = { version = "1", optional = true }
+rayon = { version = "1", optional = true }
+num_cpus = { version = "1", optional = true }
 
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
@@ -35,6 +37,7 @@ tests-gmp = ["rug/std"]
 tests-glass-pumpkin = ["glass_pumpkin"]
 tests-exhaustive = []
 tests-all = ["tests-openssl", "tests-gmp", "tests-exhaustive", "tests-glass-pumpkin"]
+rayon = ["dep:rayon", "num_cpus"]
 
 [package.metadata.docs.rs]
 features = ["default"]
