--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,12 @@ rust-version = "1.81"
 [dependencies]
 crypto-bigint = { version = "0.6.0-rc.6", default-features = false, features = ["rand_core"] }
 rand_core = { version = "0.6.4", default-features = false }
+
+# Optional dependencies used in tests and benchmarks
 openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
 rug = { version = "1.26", default-features = false, features = ["integer"], optional = true }
 glass_pumpkin = { version = "1", optional = true }
 rayon = { version = "1", optional = true }
-num_cpus = { version = "1", optional = true }
 
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
@@ -37,7 +38,7 @@ tests-gmp = ["rug/std"]
 tests-glass-pumpkin = ["glass_pumpkin"]
 tests-exhaustive = []
 tests-all = ["tests-openssl", "tests-gmp", "tests-exhaustive", "tests-glass-pumpkin"]
-rayon = ["dep:rayon", "num_cpus"]
+rayon = ["dep:rayon"]
 
 [package.metadata.docs.rs]
 features = ["default"]
@@ -47,3 +48,8 @@ rustdoc-args = ["--cfg", "docsrs"]
 [[bench]]
 name = "bench"
 harness = false
+
+[profile.bench]
+opt-level = 3
+lto = true
+codegen-units = 1
