--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
 rug = { version = "1.26", default-features = false, features = ["integer"], optional = true }
 glass_pumpkin = { version = "1", optional = true }
 rayon = { version = "1", optional = true }
+# TODO(dp): why needed?
+rand = "0.8"
 
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
