--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ proptest = "1"
 num-prime = "0.4.3"
 num_cpus = "1.16"
 test-log = { version = "0.2.16", default-features = false, features = ["trace", "color"] }
+statrs = "0.17.1"
 
 [features]
 default = ["default-rng"]
@@ -57,3 +58,6 @@ harness = false
 [profile.bench]
 lto = true
 codegen-units = 1
+
+[[example]]
+name = "distribution"
