--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,18 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.83"
 
 [dependencies]
-crypto-bigint = { version = "0.6", default-features = false, features = ["rand_core"] }
-rand_core = { version = "0.6.4", default-features = false }
+crypto-bigint = { version = "0.7.0-pre", default-features = false, features = ["rand_core"] }
+rand_core = { version = "0.9.0", default-features = false }
 
 # Optional dependencies used in tests and benchmarks
 openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
 rug = { version = "1.26", default-features = false, features = ["integer"], optional = true }
 glass_pumpkin = { version = "1", optional = true }
 rayon = { version = "1", optional = true }
-
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
-crypto-bigint = { version = "0.6.1", default-features = false, features = ["alloc"] }
-rand_chacha = "0.3"
+crypto-bigint = { version = "0.7.0-pre", default-features = false, features = ["alloc"] }
+rand_chacha = "0.9"
 criterion = { version = "0.5", features = ["html_reports"] }
 num-modular = { version = "0.5", features = ["num-bigint"] }
 num-bigint = "0.4"
@@ -33,7 +32,7 @@ num_cpus = "1.16"
 
 [features]
 default = ["default-rng"]
-default-rng = ["rand_core/getrandom"]
+default-rng = ["rand_core/os_rng"]
 tests-openssl = ["openssl"]
 tests-gmp = ["rug/std"]
 tests-glass-pumpkin = ["glass_pumpkin"]
@@ -53,3 +52,16 @@ harness = false
 [[bench]]
 name = "cctv"
 harness = false
+
+[patch.crates-io]
+# https://github.com/RustCrypto/crypto-bigint/pull/762
+# https://github.com/RustCrypto/crypto-bigint/pull/765
+crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }
+
+# https://github.com/LF-Decentralized-Trust-labs/agora-glass_pumpkin/pull/26
+glass_pumpkin = { git = "https://github.com/baloo/agora-glass_pumpkin.git", branch = "baloo/rand-core/0.9" }
+# https://github.com/rust-num/num-bigint/pull/317
+num-bigint = { git = "https://github.com/bionicles/num-bigint.git" }
+
+# https://github.com/rust-random/rand/pull/1593
+rand_core = { git = "https://github.com/fjarri/rand.git", branch = "sized" }
