Use the published crate versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.83"
 
 [dependencies]
-crypto-bigint = { version = "0.7.0-pre", default-features = false, features = ["rand_core"] }
-rand_core = { version = "0.9.0", default-features = false }
+crypto-bigint = { version = "0.7.0-pre.0", default-features = false, features = ["rand_core"] }
+rand_core = { version = "0.9.2", default-features = false }
 
 # Optional dependencies used in tests and benchmarks
 openssl = { version = "0.10.39", optional = true, features = ["vendored"] }
@@ -21,7 +21,7 @@ rayon = { version = "1", optional = true }
 
 [dev-dependencies]
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
-crypto-bigint = { version = "0.7.0-pre", default-features = false, features = ["alloc"] }
+crypto-bigint = { version = "0.7.0-pre.0", default-features = false, features = ["alloc"] }
 rand_chacha = "0.9"
 criterion = { version = "0.5", features = ["html_reports"] }
 num-modular = { version = "0.5", features = ["num-bigint"] }
@@ -30,6 +30,10 @@ num-integer = "0.1"
 proptest = "1"
 num-prime = "0.4.3"
 num_cpus = "1.16"
+
+# Temporary old versions for `glass_pumpkin` tests. Remove when `glass_pumpking` switches to `rand_core=0.9`.
+rand_core_06 = { package = "rand_core", version = "0.6.4", default-features = false }
+rand_chacha_03 = { package = "rand_chacha", version = "0.3", default-features = false }
 
 [features]
 default = ["default-rng"]
@@ -53,13 +57,3 @@ harness = false
 [[bench]]
 name = "cctv"
 harness = false
-
-[patch.crates-io]
-# https://github.com/RustCrypto/crypto-bigint/pull/762
-# https://github.com/RustCrypto/crypto-bigint/pull/765
-crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }
-
-# https://github.com/LF-Decentralized-Trust-labs/agora-glass_pumpkin/pull/26
-glass_pumpkin = { git = "https://github.com/baloo/agora-glass_pumpkin.git", branch = "baloo/rand-core/0.9" }
-# https://github.com/rust-num/num-bigint/pull/317
-num-bigint = { git = "https://github.com/bionicles/num-bigint.git" }
