--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ rust-version = "1.83"
 
 [dependencies]
 crypto-bigint = { version = "0.7.0-pre.0", default-features = false, features = ["rand_core"] }
+num-traits = { version = "0.2.19", default-features = false }
 rand_core = { version = "0.9.2", default-features = false }
 rayon = { version = "1", optional = true, default-features = false }
 
