--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,10 @@ multicore = ["rayon"]
 
 [package.metadata.docs.rs]
 features = ["default"]
-# Used to conditionally enable the unstable feature `doc-cfg`
-rustdoc-args = ["--cfg", "docsrs"]
+# Pass arguments to rustdocs as rendered by docs.rs:
+# - `--cfg docsrs` is used to conditionally enable the unstable feature `doc-cfg`
+# - `--html-in-header` is used to enable LaTeX rendering in docs
+rustdoc-args = ["--cfg", "docsrs","--html-in-header", "./resources/docs-header.html"]
 
 [[bench]]
 name = "bench"
