--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-crypto-bigint = { version = "0.7.0-pre.2", default-features = false, features = ["rand_core"] }
+crypto-bigint = { version = "0.7.0-rc.0", default-features = false, features = ["rand_core"] }
 libm = { version = "0.2.13", default-features = false, features = ["arch"] }
 rand_core = { version = "0.9.2", default-features = false }
 rayon = { version = "1", optional = true, default-features = false }
