--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.85"
 [dependencies]
 crypto-bigint = { version = "0.7.0-pre.10", default-features = false, features = ["rand_core"] }
 libm = { version = "0.2.13", default-features = false, features = ["arch"] }
-rand_core = { version = "0.10.0-rc.2", default-features = false }
+rand_core = { version = "0.10.0-rc-3", default-features = false }
 rayon = { version = "1", optional = true, default-features = false }
 
 # Optional dependencies used in tests and benchmarks
@@ -21,7 +21,7 @@ rug = { version = "1.26", optional = true, default-features = false, features = 
 glass_pumpkin = { version = "1", optional = true }
 
 [dev-dependencies]
-rand = { version = "0.10.0-rc.1", features = ["chacha"] }
+rand = { version = "0.10.0-rc.5", features = ["chacha"] }
 # need `crypto-bigint` with `alloc` to test `BoxedUint`
 crypto-bigint = { version = "0.7.0-pre.10", default-features = false, features = ["alloc"] }
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -61,3 +61,7 @@ harness = false
 [[bench]]
 name = "cctv"
 harness = false
+
+[patch.crates-io]
+getrandom = { git = "https://github.com/rust-random/getrandom.git" }
+rand = { git = "https://github.com/baloo/rand.git", branch = "push-rnopzwursrov" }
